--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         Sorry, your browser does not support the <audio> tag used in this demo.
         </div>
     </audio>
-    <img class="wallpaper_rock" src="images/wallpaper_rock.png" alt="">
+    <img class="wallpaper_rock" src="images/wallpaper_rock.gif" alt="">
     <img class="tchouki_run" src="images/tchouki_right.gif" alt="">
     <div class="tchouki_logo">
         <img src="images/tchouki_logo.png" alt="">
